# traning_api_test

./: .travis.yml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  report.html  requirements.txt
api/: client.py
common/: logging.py  utils.py
common/schema/: booking.py
model/: booking.py  login.py
tests/: test_auth.py  test_booking_api.py
