[tool.poetry]
name = "traning_api_test"
version = "0.1.0"
description = ""
authors = ["litovsky <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.7.9"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
